<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/input_date_diary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_text_diary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20dp"
            android:text="@string/text_diary_date"/>

        <TextView
            android:id="@+id/date_diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_text_diary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_date_diary"
        app:layout_constraintBottom_toTopOf="@+id/log_diary_buttons">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:text="@string/text_diary"/>

        <EditText
            android:id="@+id/enter_text_diary"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/log_diary_buttons"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_text_diary"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/log_diary_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/log_diary_save"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>