<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/select_period_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enter_cycle_date">

        <TextView
            android:id="@+id/text_period_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:text="@string/text_period_date"/>

        <DatePicker
            android:id="@+id/date_picker"
            android:headerBackground="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:datePickerMode="calendar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter_cycle_date"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_period_date"
        app:layout_constraintBottom_toTopOf="@id/log_period_buttons">

        <TextView
            android:id="@+id/text_cycle_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/text_cycle_length"/>

        <EditText
            android:id="@+id/edit_cycle_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="number"
            android:hint="days"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/log_period_buttons"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_cycle_date"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/log_period_cancel"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/log_period_save"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>